samples/_failures_safe/1761040490_9c56a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25a09d1e.c: In function ‘main’:
./samples/SAFE/__tmp_25a09d1e.c:164:5: error: expected declaration or statement at end of input
  164 |     graph_add_edge(&graph, 2, 3, 8);
      |     ^~~~~~~~~~~~~~
